@@ -1,22 +1,0 @@
-@comment $NetBSD: PLIST,v 1.7 2013/01/07 13:26:41 wiz Exp $
-include/itcl.h
-include/itclDecls.h
-include/itclInt.h
-include/itclIntDecls.h
-lib/itcl3.4/itcl.tcl
-lib/itcl3.4/libitcl3.4.so
-lib/itcl3.4/libitclstub3.4.a
-lib/itcl3.4/pkgIndex.tcl
-lib/itclConfig.sh
-man/mann/body.n
-man/mann/class.n
-man/mann/code.n
-man/mann/configbody.n
-man/mann/delete.n
-man/mann/ensemble.n
-man/mann/find.n
-man/mann/is.n
-man/mann/itcl.n
-man/mann/itclvars.n
-man/mann/local.n
-man/mann/scope.n
