@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.10 2013/01/07 13:26:41 wiz Exp $
-
-SHA1 (itcl3.4.1.tar.gz) = b791374d8fe4c5b31d6f45793622499a9d08d3e1
-RMD160 (itcl3.4.1.tar.gz) = a3293d8e7beeee8cd308a7c56edf7c790a374ef4
-Size (itcl3.4.1.tar.gz) = 263316 bytes
